# python-networking-bigswitch-bsnlldp

./: MANIFEST.in  README.md  README.rst  bsnlldp  bsnlldp-1.0.spec  bsnlldp.default  bsnlldp.service  setup.cfg
bsnlldp/: bsnlldp.py
etc/: bsnlldp.service  python-networking-bigswitch-bsnlldp.spec
