[metadata]
name = bsnlldp
version = 3.0.0
summary = Big Switch Networks LLDP agent
description-file =
    README.rst
author = Big Switch Networks
author-email = support@bigswitch.com
home-page = http://www.bigswitch.com/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
data_files =
    /etc/systemd/system = etc/bsnlldp.service
packages =
    bsnlldp

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    bsnlldp = bsnlldp.bsnlldp:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = bsnlldp/locale/bsnlldp.pot

[compile_catalog]
directory = bsnlldp/locale
domain = bsnlldp

[update_catalog]
domain = bsnlldp
output_dir = bsnlldp/locale
input_file = bsnlldp/locale/bsnlldp.pot

[wheel]
universal = 1
